<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Pregunta1Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta1"
        android:textSize="18dp"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/checkBoxNegro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/negro"/>
    <CheckBox
        android:id="@+id/checkBoxAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/azul"/>
    <CheckBox
        android:id="@+id/checkBoxVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verde"/>

    <Button
        android:id="@+id/buttonNext"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"/>

</LinearLayout>